# ImageSplicing

./: .$拼好图.drawio.bkp  .gitignore  CMakeLists.txt  CMakeLists.txt.user.0f76600  CMakeLists.txt.user.ddd3a97  HorizontalMovablePixmapItem.cpp  HorizontalMovablePixmapItem.h  ImageSplicing_zh_CN.ts  LICENSE  MovablePixmapItem.cpp  MovablePixmapItem.h  README.md  SplicingLine.cpp  SplicingLine.h  VerticalMovablePixmapItem.cpp  VerticalMovablePixmapItem.h  VerticalMovabliPixmapItemManager.hpp  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutimagesplicingdialog.cpp  aboutimagesplicingdialog.h  aboutimagesplicingdialog.ui  config.hpp  editpage.cpp  editpage.ui  enumerate.cpp  enumerate.h  imageeditwidget.cpp  imageeditwidget.h  imageeditwidget.ui  imagepro.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting.cpp  setting.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  (+9 more)
build-ImageSplicing-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  CMakeCache.txt.tmpa068f  ImageSplicing.cbp  cmake_install.cmake
build-ImageSplicing-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-ba7cf4ed5cfcc49dce53.json  cmakeFiles-v1-2fe1b27bf14274df9236.json  codemodel-v2-4e3eb9361c4fe1ef23ea.json  index-2025-07-04T07-33-15-0737.json  target-ImageSplicing-Debug-94c57632a715e7940af9.json  target-ImageSplicing_autogen-Debug-18a8bddc9fd3428a0f20.json
nlohmann/: json.hpp
